# RAG-Vector-Data-Visualizer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  phase2-smoke.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: api_key.py  audit_log.py  chunk.py  common.py  document.py  experiment.py  project.py  query_run.py  strategy.py  user.py  workspace.py
backend/app/routers/: admin.py  auth.py  data_layer.py  documents.py  experiments.py  projects.py  query_analysis.py  rbac.py  reports.py  strategies.py  workspaces.py
backend/app/schemas/: admin.py  auth.py  chunk.py  data_layer.py  document.py  experiment.py  project.py  query.py  rbac.py  report.py  strategy.py  user.py  workspace.py
backend/app/services/: admin_service.py  audit_service.py  auth_service.py  chunking_service.py  data_layer_service.py  document_service.py  embedding_service.py  evaluation_service.py  experiment_service.py  extraction_service.py  hybrid_search_service.py  object_storage_service.py  optimization_service.py  project_service.py  rbac_analysis_service.py  rbac_service.py  report_service.py  rerank_service.py  retrieval_service.py  sparse_search_service.py  strategy_service.py  visualization_service.py  workspace_service.py
backend/app/tests/: test_chunking_service.py  test_extraction_service.py  (+3 more)
backend/rag_visual_optimizer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed.py
(+46 files in other folders)
