[project]
name = "rag-visual-optimizer-backend"
version = "0.1.0"
description = "FastAPI backend for RAG Visual Optimizer."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=25.1.0",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "minio>=7.2.7",
  "beautifulsoup4>=4.12.3",
  "pgvector>=0.3.2",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.3.4",
  "pydantic>=2.8.2",
  "pyjwt>=2.8.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "redis>=5.0.7",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.5",
  "mypy>=1.10.1"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
ignore_missing_imports = true
